# Info-Butler

./: .env.example  .gitignore  DIFY_WORKFLOW_GUIDE.md  FEISHU_ACCOUNT_BINDING.md  FEISHU_BOT_USAGE.md  FEISHU_SETUP_GUIDE.md  LOGGING.md  Makefile  QUICKSTART.md  README.md  RSS_SOURCES.md  STARTUP_TEST.md  alembic.ini  dev-guide.md  ecosystem.config.js  main.py  package.json  prd.md  pyproject.toml  review.md  start.bat  start.ps1  stop.bat  stop.ps1  tasks.md  user-to-do-list.md
.claude/: settings.local.json
.playwright-mcp/: page-2026-05-16T06-15-00-467Z.yml
.trae/rules/: rules.md
alembic/: env.py
backend/: main.py
backend/api/: deps.py
backend/api/v1/: actions.py  auth.py  (+10 more)
backend/clients/: dify_client.py  feishu_client.py  scraper_client.py
backend/core/: config.py  database.py  exceptions.py  middleware.py  redis.py  security.py
backend/models/: __init__.py  action_item.py  raw_info.py  rss_subscription.py  tag.py  user.py
backend/schemas/: action_item.py  auth.py  batch.py  dify_response.py  digest.py  tag.py
backend/services/: action_service.py  command_service.py  digest_service.py  export_service.py  feishu_bot_service.py  file_parser.py  reminder_service.py  review_service.py  rss_service.py  scheduler_service.py  tag_service.py
backend/workers/: arq_client.py  run_worker.py  tasks.py  worker_settings.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  components.d.ts
scripts/: check_feishu_config.py
tests/: conftest.py  test_actions.py  test_api.py  test_digest.py
(+11 files in other folders)
