[project]
name = "info-butler"
version = "0.1.0"
description = "Personal information processing butler with AI-powered digest, action extraction, and knowledge management"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "feedparser>=6.0.12",
    "python-multipart>=0.0.26",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["test_api.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
